--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
 
 <header>
 	<div id="titlebar" class="landingOverlay"><div class="logo"></div></div>
-	<div id="navbar" class="landingOverlay"></div>
+	<div id="navbar" class="landingOverlay">
+		<nav>
+			<ul>
+				<li></li>
+			</ul>
+		</nav>
+	</div>
 </header>
 
 
