added fixnav class

--- a/index.html
+++ b/index.html
@@ -11,13 +11,36 @@
 	<div id="titlebar" class="landingOverlay"><div class="logo"></div></div>
 	<div id="navbar" class="landingOverlay">
 		<nav>
-			<ul>
-				<li></li>
-			</ul>
+			
+				<span>Das Team</span>
+				<span>Vision</span>
+				<span>Kontakt</span>
+			
 		</nav>
 	</div>
 </header>
 
+<section>
+	<h1>Das Team</h1>
+	<p>lorem</p>
+	<br>
+	<p>lorem</p>
+	<br>
+	<p>lorem</p>
+	<br>
+	<p>lorem</p>
+	<br>
+	<p>lorem</p>
+	<br>
+	<p>lorem</p>
+	<br>
+	<p>lorem</p>
+	<br>
+	<p>lorem</p>
+	<br>
+	<p>lorem</p>
+	<br>
+</section>
 
 </body>
 </html>
