started logo animation

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 
 
 <header>
-	<div id="titlebar" class="landingOverlay"><div class="logo"></div></div>
+	<div id="titlebar" class="landingOverlay"><div class="textLogo"></div></div>
 	<div id="navbar" class="landingOverlay">
-		<nav>
-			
+		<!--div class="logo"></div-->
+		<nav>			
 				<span>Das Team</span>
 				<span>Vision</span>
 				<span>Kontakt</span>
