--- a/v2/index.html
+++ b/v2/index.html
@@ -8,10 +8,14 @@
 
 <header>
 	<img id="background-image" src="img/bg.jpg" alt="Background Picture">
-	<div class="center-vert">
-		<img src="img/fff.svg" alt="FixForFlex Logo">
-		<div class="backdrop">
-			<h3>construction technology</h3>
+	<div class="center-vert fill">
+		<div id="titlebox">
+			<div id="titlewrap">
+				<img id="logopic" src="img/fff.svg" alt="FixForFlex Logo">
+				<div class="backdrop">
+					<h3>construction technology</h3>
+				</div>
+			</div>
 		</div>
 	</div>
 	<nav class="backdrop">
