--- a/v2/index.html
+++ b/v2/index.html
@@ -2,30 +2,93 @@
 <html>
 <head>
 	<title>FixForFlex</title>
+	<link rel="stylesheet" type="text/css" href="index.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+	<script type="text/javascript" src="index.js"></script>
+
+</head>
+<body>
+<h1 style="display:none">FixForFlex</h1>
+<header class="fullscreen rel coverbg crop" id="mainbg">
+	
+	<div class="fill flex fv fcenter">
+		<div class="flex fh fend">
+			<div id="title">
+				<img id="logopic" src="img/fff.svg" alt="FixForFlex Logo" style="fill: white">
+				<div class="uppercase brightOverlay centertext textbar"><h2>construction technology</h2></div>
+			</div>
+		</div>
+	</div>
+	<!--img id="mainbg" class="abs" src="img/bg.jpg"-->
+	<nav class="brightOverlay abs bottom flex fh fcenter uppercase">
+		<span class="button">contact</span>
+		<span class="button">products</span>
+		<span class="button">projects</span>
+		<span class="button">about us</span>
+		<span class="button">gallery</span>
+	</nav>
+</header>
+
+<section>
+	<h1 class="uppercase">contact</h1>
+</section>
+
+
+<div class="high">
+	<p style="max-width: 500px">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+</div>
+
+
+</body>
+</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!----!DOCTYPE html>
+<html>
+<head>
+	<title>FixForFlex</title>
 	<link rel="stylesheet" href="index.css">
 </head>
 <body>
 
-<header>
-	<img id="background-image" src="img/bg.jpg" alt="Background Picture">
-	<div class="center-vert fill">
-		<div id="titlebox">
+<header class="center-bg">
+	<div class="flex-v fill">
+		<div class="flex-h">
 			<div id="titlewrap">
-				<img id="logopic" src="img/fff.svg" alt="FixForFlex Logo">
+				<!--img id="logopic" src="img/fff.svg" alt="FixForFlex Logo">
 				<div class="backdrop">
 					<h3>construction technology</h3>
 				</div>
 			</div>
 		</div>
 	</div>
-	<nav class="backdrop">
+	
+</header>
+
+</body>
+</html>
+
+
+<!---nav class="backdrop">
 		<span>contact</span>
 		<span>products</span>
 		<span>projects</span>
 		<span>about us</span>
 		<span>gallery</span>
 	</nav>
-</header>
-
-</body>
-</html>
