--- a/v2/index.html
+++ b/v2/index.html
@@ -30,65 +30,27 @@
 </header>
 
 <section>
-	<h1 class="uppercase">contact</h1>
+	<h3 class="uppercase">contact</h1>
+	<div class="colParent rel">
+		<div class="col col1 abs">
+			<p>Donec posuere auctor quam, ac eleifend lacus dictum at. Pellentesque fringilla sapien quis erat pulvinar, id tempor magna cursus. Vivamus gravida nisi id porttitor feugiat. Praesent eu placerat ipsum, sit amet laoreet felis. Cras risus libero, congue non lorem vel, rutrum porta leo. Duis ut neque vestibulum, interdum neque vel, tincidunt mi. In malesuada, eros nec tincidunt cursus, lectus erat volutpat felis, at iaculis erat enim id ipsum. Sed hendrerit turpis quis enim ullamcorper, vel euismod orci vulputate. In id posuere augue, sed vehicula lectus. </p>
+		</div>
+		<div class="col col2 abs">
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		</div>
+	</div>
 </section>
 
 
-<div class="high">
+<!--div class="high">
 	<p style="max-width: 500px">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-</div>
+</div-->
 
 
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!----!DOCTYPE html>
-<html>
-<head>
-	<title>FixForFlex</title>
-	<link rel="stylesheet" href="index.css">
-</head>
-<body>
-
-<header class="center-bg">
-	<div class="flex-v fill">
-		<div class="flex-h">
-			<div id="titlewrap">
-				<!--img id="logopic" src="img/fff.svg" alt="FixForFlex Logo">
-				<div class="backdrop">
-					<h3>construction technology</h3>
-				</div>
-			</div>
-		</div>
-	</div>
-	
-</header>
-
-</body>
-</html>
-
-
-<!---nav class="backdrop">
-		<span>contact</span>
-		<span>products</span>
-		<span>projects</span>
-		<span>about us</span>
-		<span>gallery</span>
-	</nav>
